--- a/apps/restapi/package.json
+++ b/apps/restapi/package.json
@@ -31,6 +31,7 @@
     "@prisma/extension-accelerate": "^2.0.2",
     "argon2": "^0.44.0",
     "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
     "prisma": "^6.19.0",
     "reflect-metadata": "^0.2.2",
@@ -45,6 +46,7 @@
     "@types/express": "^5.0.0",
     "@types/jest": "^30.0.0",
     "@types/node": "^22.10.7",
+    "@types/passport-google-oauth20": "^2.0.17",
     "@types/passport-jwt": "^4.0.1",
     "@types/supertest": "^6.0.2",
     "eslint": "^9.18.0",
